Clean up dynamic evals example

--- a/examples/dynamic_evaluations/simple-agentic-rag/config/tensorzero.toml
+++ b/examples/dynamic_evaluations/simple-agentic-rag/config/tensorzero.toml
@@ -1,3 +1,5 @@
+gateway.debug = true
+
 # ┌────────────────────────────────────────────────────────────────────────────┐
 # │                                 FUNCTIONS                                  │
 # └────────────────────────────────────────────────────────────────────────────┘
