Clean up dynamic evals example

--- a/examples/dynamic_evaluations/simple-agentic-rag/pyproject.toml
+++ b/examples/dynamic_evaluations/simple-agentic-rag/pyproject.toml
@@ -7,12 +7,10 @@ dependencies = [
     "ipykernel",
     "jupyter",
     "markdownify",
-    "tensorzero==2025.8.2",
+    "tensorzero>=2025.8.5",
     "tqdm>=4.67.1",
     "wikipedia",
 ]
 
 [dependency-groups]
-dev = [
-    "pyright",
-]
+dev = ["pyright"]
