--- a/tensorzero-core/tests/e2e/tensorzero.toml
+++ b/tensorzero-core/tests/e2e/tensorzero.toml
@@ -1693,7 +1693,7 @@ json_mode = "strict"
 
 [functions.json_success]
 type = "json"
-system_schema = "../../fixtures/config/functions/basic_test/system_schema.json"
+schemas.system.path = "../../fixtures/config/functions/basic_test/system_schema.json"
 user_schema = "../../fixtures/config/functions/json_success/user_schema.json"
 output_schema = "../../fixtures/config/functions/basic_test/output_schema.json"
 
@@ -1702,7 +1702,7 @@ type = "chat_completion"
 weight = 1
 model = "json"
 system_template = "../../fixtures/config/functions/json_success/prompt/system_template.minijinja"
-user_template = "../../fixtures/config/functions/json_success/prompt/user_template.minijinja"
+templates.user.path = "../../fixtures/config/functions/json_success/prompt/user_template.minijinja"
 max_tokens = 100
 json_mode = "strict"
 
