Disable multi_hop_rag_agent for multi_hop_rag_agent in tests
The model can nondeterministically output either one or two
'think' calls, which changes the number of judge calls that we make.
This results in an inconsistent number of rows in the model inference
cache, causing our regen tests to fail

--- a/ui/fixtures/config/tensorzero.toml
+++ b/ui/fixtures/config/tensorzero.toml
@@ -197,7 +197,7 @@ model = "openai::gpt-4o-mini-2024-07-18"
 type = "chat"
 tools = ["think", "search_wikipedia", "load_wikipedia_page", "answer_question"]
 tool_choice = "required"
-parallel_tool_calls = true
+parallel_tool_calls = false
 
 [functions.multi_hop_rag_agent.variants.baseline]
 type = "chat_completion"
