--- a/ui/fixtures/config/tensorzero.e2e.toml
+++ b/ui/fixtures/config/tensorzero.e2e.toml
@@ -211,7 +211,7 @@ retries = { num_retries = 4, max_delay_s = 10 }
 type = "chat"
 tools = ["think", "search_wikipedia", "load_wikipedia_page", "answer_question"]
 tool_choice = "required"
-parallel_tool_calls = true
+parallel_tool_calls = false
 
 [functions.multi_hop_rag_agent.variants.baseline]
 type = "chat_completion"
