--- a/.github/workflows/ui-tests-e2e-model-inference-cache.yml
+++ b/.github/workflows/ui-tests-e2e-model-inference-cache.yml
@@ -112,7 +112,19 @@ jobs:
           echo "S3_SECRET_ACCESS_KEY=${{ secrets.S3_SECRET_ACCESS_KEY }}" >> fixtures/.env-gateway
           # Save the old cache file for comparison
           cp ./fixtures/model_inference_cache_e2e.jsonl ./fixtures/model_inference_cache_e2e.jsonl.old
-          ./fixtures/regenerate-model-inference-cache.sh
+          # Run up to 3 times if it fails. We need to retry *outside* of playwright, so that we wipe the
+          # model inference cache each time. Retrying an individual playwright test without wiping the database
+          # will pollute the cache with duplicate entries.
+          for i in {1..3}; do
+            if ./fixtures/regenerate-model-inference-cache.sh; then
+              break
+            elif [ $i -eq 3 ]; then
+              echo "Failed after 3 attempts"
+              exit 1
+            else
+              echo "Attempt $i failed, retrying..."
+            fi
+          done
           # Check that the old and new cache files have the same number of rows
           OLD_ROWS=$(wc -l < ./fixtures/model_inference_cache_e2e.jsonl.old)
           NEW_ROWS=$(wc -l < ./fixtures/model_inference_cache_e2e.jsonl)
