--- a/.github/workflows/ui-tests-e2e.yml
+++ b/.github/workflows/ui-tests-e2e.yml
@@ -277,7 +277,7 @@ jobs:
   ui-tests-e2e-existing-model-inference-cache:
     uses: ./.github/workflows/ui-tests-e2e-model-inference-cache.yml
     with:
-      regen_cache: true
+      regen_cache: false
     secrets:
       S3_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
       S3_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
