--- a/Cargo.toml
+++ b/Cargo.toml
@@ -98,6 +98,11 @@ unreachable = "deny"
 unused_self = "deny"
 unwrap_used = "deny"
 
+# The following pedantic lints are explicitly set to "allow" to give authors discretion on their use.
+match_same_arms = "allow"
+must_use_candidate = "allow"
+single_match_else = "allow"
+
 [profile.performance]
 inherits = "release"
 lto = "fat"
