--- a/examples/dynamic_evaluations/simple-agentic-rag/pyproject.toml
+++ b/examples/dynamic_evaluations/simple-agentic-rag/pyproject.toml
@@ -7,7 +7,10 @@ dependencies = [
     "ipykernel",
     "jupyter",
     "markdownify",
-    "tensorzero",
+    "tensorzero>=2025.8.5",
     "tqdm>=4.67.1",
     "wikipedia",
 ]
+
+[dependency-groups]
+dev = ["pyright"]
