docker compose tests (#3294)
* renamed pipelines

* fixed script name

* one more name change

* Update buildkite-test-suite.yml

* added gateway container build step

* artifact paths?

* temporarily disabled other workflows

* put it back

* added a load

* added ui tests to buildkite

* send ui tests to buildkite

* forgot a path

* fix rust in node tests script

* try fvm instead of nvm

* fixed install

* added ui container build step to buildkite;

* rip

* try volta?

* sheeesh gotta actually build the ui container

* dbg

* dbg

* dbg

* dbg

* interesting?

* env vars?

* no cd in tests; add config env var

* added analytics token

* fixed test collector?

* run from root

* changed path

* added tensorzero-node tests with tracking

* forgot a file

* added cleanup function

* added mock inference provider container build

* forgot a file

* first attempt at ui e2e tests

* added Rust setup

* fixed typo

* fixed paths

* fixed another typo

* ??

* set tensorzero ci var

* added test collection for playwright

* added clickhouse test stuff

* oops bad path

* fixed key

* fixed download script maybe

* added a sleep

* fixed typo

* added sleep to fixture download

* removed cargo build

* fix uv setup

* fix

* fix

* removed sleep infinity

* fixed profile

* fixed curl for sending test results

* setup a matrix over clickhouse versions

* fixed matrix value access

* added a start to a buildkite merge queue job

* removed x from scripts that handle secrets

* temporarily turn on merge queue buildkite tests

* fixed name of merge queue gh workflow

* try this?

* fixed sloppy parts

* added jwt secret handling

* loosened check on clickhouse assertion

* added secret handling

* try this?

* try this?

* do we even need node here?

* add clear disk space script

* pin gateway tag

* pin mock server tag

* fix the provider proxy cache

* fix the provider proxy cache credentials

* remove the --build flag

* fixed gateway pid thing

* fixed file location f

--- a/.dockerignore
+++ b/.dockerignore
@@ -11,7 +11,11 @@ target-rust-analyzer
 **/.claude
 /recipes
 /examples
+gcp_jwt_key.json
+.credentials/
+/docs
 !/examples/integrations/cursor/feedback
 !/examples/quickstart/package.json
 !/examples/integrations/helicone/package.json
 !/examples/guides/tool-use/package.json
+!/examples/haiku-hidden-preferences
