--- a/.config/nextest.toml
+++ b/.config/nextest.toml
@@ -27,12 +27,14 @@ slow-timeout = { period = "20s", terminate-after = 3 }
 [profile.e2e]
 retries = { backoff = "exponential", count = 4, delay = "5s", jitter = true, max-delay = "60s" }
 default-filter = "not (test(batch)) and not (test(test_dummy_only) | test(clickhouse))"
+junit.path = "junit.xml"
 
 [profile.batch]
 default-filter = 'test(batch)'
 
 [profile.clickhouse]
 default-filter = 'test(test_dummy_only) | test(clickhouse)'
+junit.path = "junit.xml"
 
 [profile.optimization]
 default-filter = 'binary(optimization-live)'
