--- a/clients/python/pyproject.toml
+++ b/clients/python/pyproject.toml
@@ -52,6 +52,7 @@ build-backend = "maturin"
 dev = [
     "maturin",
     "mypy",
+    "buildkite-test-collector",
     "pyright",
     "pytest-asyncio",
     "pytest-xdist",
