--- a/clients/python/tests/Dockerfile
+++ b/clients/python/tests/Dockerfile
@@ -9,16 +9,23 @@ RUN apt-get update && apt-get install -y \
     libc++-dev \
     pkg-config \
     libssl-dev \
+    python3 \
+    python3-pip \
+    python3-venv \
     && rm -rf /var/lib/apt/lists/*
+
+# Install uv
+COPY --from=ghcr.io/astral-sh/uv:latest /uv /uvx /bin/
 
 # Copy the entire workspace
 COPY . .
 
-# Build the tensorzero-python crate with e2e_tests feature
+# Install maturin and build the python client wheel with e2e_tests feature
 RUN --mount=type=cache,id=tensorzero-python-release,sharing=locked,target=/usr/local/cargo/registry \
     --mount=type=cache,id=tensorzero-python-release,sharing=locked,target=/usr/local/cargo/git \
-    cargo build --features e2e_tests -p tensorzero-python && \
-    cp -r /src/target/debug /release
+    uv tool install maturin && \
+    cd clients/python && \
+    uv tool run maturin build --features e2e_tests --release --out dist --find-interpreter
 
 # ========== runtime ==========
 FROM ghcr.io/astral-sh/uv:debian-slim AS runtime
@@ -31,34 +38,21 @@ RUN apt-get update && apt-get install -y \
 
 WORKDIR /app
 
-# Copy the entire workspace for the runtime build
-COPY . .
+# Copy only the Python client files needed for tests (excluding any built artifacts)
+COPY clients/python/pyproject.toml /app/clients/python/
+COPY clients/python/uv.lock /app/clients/python/
+COPY clients/python/pytest.ini /app/clients/python/
+COPY clients/python/tests/ /app/clients/python/tests/
+COPY clients/python/test-no-rebuild.sh /app/clients/python/
 
 # Change to the Python client directory
 WORKDIR /app/clients/python
 
-# Copy built Rust binary from builder stage
-COPY --from=builder /release/ /app/target/debug/
+# Copy the wheel from builder stage
+COPY --from=builder /src/clients/python/dist/*.whl /tmp/
 
-# Install dependencies and the project in editable mode (this will initially fail to build the extension)
-RUN uv sync --frozen || true
-
-# Copy the pre-built library directly into the Python site-packages, overriding any stub
-RUN python_site_packages=$(find .venv/lib -name "site-packages" -type d | head -1) && \
-    tensorzero_so=$(find /app/target/debug -name "*tensorzero*.so" | head -1) && \
-    if [ -n "$tensorzero_so" ] && [ -n "$python_site_packages" ]; then \
-        cp "$tensorzero_so" "$python_site_packages/"; \
-        echo "Copied $tensorzero_so to $python_site_packages/"; \
-        ls -la "$python_site_packages"/*tensorzero* || echo "No tensorzero files found after copy"; \
-    else \
-        echo "Could not find tensorzero .so file or site-packages directory"; \
-        find /app/target/debug -name "*.so" || echo "No .so files found"; \
-        find .venv -name "site-packages" -type d || echo "No site-packages found"; \
-        exit 1; \
-    fi
-
-# Install the project properly now that we have the pre-built extension
-RUN uv sync --frozen
+# Create virtual environment and install dependencies (excluding the local tensorzero package)
+RUN uv sync --frozen --no-install-project && uv pip install $(ls /tmp/tensorzero-*.whl | head -1)
 
 # Set default command to run tests without rebuilding
 CMD ["./test-no-rebuild.sh"]
