Add `{"type": "template"}` input block
The format is:
`{"type": "template", "name": "template", "arguments": {}}`

This allows invoking a custom named template, or
"user"/"assistant"/"system".

A `{"type": "text", "text": "Some text"}` block will now
**bypass* templates, and behave like `raw_text`.
For backwards compatibility, a template defined using
`[user/assistant/system]_template` or `input_wrappers` will
invoke the template with `user_text/assistant_text/system_text`.

New-style named templates defined with `templates.<name>.path>`
will be bypassed when using `{"type": "text", "text": "..."}`

--- a/tensorzero-core/tests/e2e/tensorzero.toml
+++ b/tensorzero-core/tests/e2e/tensorzero.toml
@@ -885,6 +885,7 @@ model = "dummy::echo_request_messages"
 input_wrappers.system = "../../fixtures/config/functions/basic_test_template_no_schema/prompt/system_template.minijinja"
 assistant_template = "../../fixtures/config/functions/basic_test_template_no_schema/prompt/assistant_template.minijinja"
 user_template = "../../fixtures/config/functions/basic_test_template_no_schema/prompt/user_template.minijinja"
+templates.my_custom_template.path = "../../fixtures/config/functions/basic_test_template_no_schema/prompt/my_custom_template.minijinja"
 
 [functions.basic_test_template_no_schema.variants.mixture_of_n]
 type = "experimental_mixture_of_n"
