--- a/ci/buildkite/merge-queue-tests.yml
+++ b/ci/buildkite/merge-queue-tests.yml
@@ -88,9 +88,18 @@ steps:
       automatic:
         - exit_status: "*"
           limit: 3
+
   - label: "Build Python Client Tests Container"
     command: bash ./ci/buildkite/build-python-client-tests-container.sh
     key: "build-python-client-tests-container"
+    retry:
+      automatic:
+        - exit_status: "*"
+          limit: 3
+
+  - label: "Build OpenAI Node Client Tests Container"
+    command: bash ./ci/buildkite/build-openai-node-client-tests-container.sh
+    key: "build-openai-node-client-tests-container"
     retry:
       automatic:
         - exit_status: "*"
