--- a/clippy.toml
+++ b/clippy.toml
@@ -1,3 +1,4 @@
 allow-expect-in-tests = true
 allow-panic-in-tests = true
 allow-unwrap-in-tests = true
+doc-valid-idents = ["TensorZero", "ClickHouse", ".."]
