--- a/Cargo.toml
+++ b/Cargo.toml
@@ -73,11 +73,7 @@ unsafe_code = "forbid"
 allow_attributes = "deny"
 dbg_macro = "deny"
 # NB: Slowly making progress towards:
-# doc_markdown = { level = "deny", doc-valid-idents = [
-#     "TensorZero",
-#     "ClickHouse",
-#     "..",
-# ] }
+# doc_markdown = "deny"
 expect_used = "deny"
 explicit_iter_loop = "deny"
 if_not_else = "deny"
