--- a/.github/workflows/merge-queue.yml
+++ b/.github/workflows/merge-queue.yml
@@ -6,6 +6,7 @@ on:
   merge_group:
     paths-ignore:
       - "docs/**"
+  push:
   schedule:
     - cron: "0 0 * * *" # Runs at 00:00 UTC every day
 
