--- a/.github/workflows/general.yml
+++ b/.github/workflows/general.yml
@@ -407,12 +407,13 @@ jobs:
     strategy:
       matrix:
         # Only include replicated: true when running in merge queue
-        replicated: ${{ github.event_name == 'merge_group' && fromJSON('[true, false]') || fromJSON('[false]') }}
+        replicated: ${{ github.event_name == 'merge_group' && fromJSON('[true, false]') || fromJSON('[true,false]') }}
         clickhouse_version: ${{ github.event_name == 'merge_group' && fromJSON('[{"tag":"24.12-alpine","prefix":"24.12","allow_failure":false},{"tag":"latest","prefix":"","allow_failure":false}]') || fromJSON('[{"tag":"latest","prefix":"","allow_failure":false}]') }}
         exclude:
           # Use 25.7-alpine instead of latest for replicated tests in merge group
           - replicated: true
-            clickhouse_version: {"tag":"latest","prefix":"","allow_failure":false}
+            clickhouse_version:
+              { "tag": "latest", "prefix": "", "allow_failure": false }
           # Add 25.7-alpine for replicated tests in merge group
         include: ${{ github.event_name == 'merge_group' && fromJSON('[{"clickhouse_version":{"tag":"25.7-alpine","prefix":"25.7","allow_failure":false},"replicated":true}]') || fromJson('[]') }}
 
